# chessli

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  index.html  mkdocs.yml  old_readme.md  pyproject.toml  pytest.ini  readme.md  setup.py  sitemap.xml  todo.md
.github/workflows/: ci.yml  deploy_docs.yml
_index/: index.html
acknowledgments/: index.html
basic_usage/: index.html
chessli/: __init__.py  ankify.py  enums.py  games.py  mistakes.py  openings.py  rich_logging.py  tactics.py  user.py  utils.py
chessli/cli/: games.py  lichess.py  main.py  openings.py  option_callbacks.py  stats.py  tactics.py
cli/: index.html
configs/: fetching.yml
data/puzzles/: lichess_db_puzzle.csv
docs/: _index.md  acknowledgments.md  basic_usage.md  cli.md  dependency_structure.md  faqs.md  features.md  folder_structure.md  getting_started.md  home.md  index.md  make_commands_overview.md  mkdocs_index.md  support.md
docs/how_to_guides/: _index.md  how_to_get_better_at_tactics.md  how_to_improve_your_opening_repertoire.md  how_to_learn_from_your_games.md  how_to_use_chesslis_anki_cards.md
docs/tutorial/: _index.md  how_to_create_an_opening_repertoire.md  how_to_get_better_at_tactics.md  how_to_get_started_with_chessli.md  how_to_learn_from_your_games.md  how_to_set_up_chessli.md  how_to_use_chesslis_anki_cards.md
faqs/: index.html
features/: index.html
getting_started/: index.html
imgs/: Chessli Sample Cards.apkg
search/: search_index.json
support/: index.html
tests/: test_cli_commands.py
tutorial/_index/: index.html
tutorial/how_to_create_an_opening_repertoire/: index.html
tutorial/how_to_get_better_at_tactics/: index.html
tutorial/how_to_learn_from_your_games/: index.html
tutorial/how_to_set_up_chessli/: index.html
tutorial/how_to_use_chesslis_anki_cards/: index.html
