
[tool.poetry]
name = "chessli"
homepage = "https://github.com/pwenker/chessli"
documentation = "https://pwenker.github.io/chessli"
version = "0.2.2"
description = "A free and open source chess improvement app that combines the power of lichess and anki"
authors = ["Pascal Wenker <pwenker@posteo.de>"]
readme = "readme.md"
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]

[tool.poetry.scripts]
chessli = "chessli.cli.main:app"

[tool.poetry.dependencies]
python = "^3.7.1"
python-chess = "^1.999"
typer = "^0.3.2"
rich = "^9.9.0"
omegaconf = "^2.0.6"
berserk = "^0.10.0"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
isort = "^5.7.0"
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
